...
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="120" id="z8n-wL-QaU"/>
                                                </constraints>
                                            </imageView>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bVG-pA-nWO">
                                                <rect key="frame" x="0.0" y="136" width="382" height="45"/>
                                                <accessibility key="accessibilityConfiguration" identifier="txtEmail"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="45" id="yHS-bR-fSW"/>
                                                </constraints>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" keyboardAppearance="alert" returnKeyType="next"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Py6-cP-93z">
                                                <rect key="frame" x="0.0" y="197" width="382" height="45"/>
                                                <accessibility key="accessibilityConfiguration" identifier="txtPassword"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardAppearance="alert" returnKeyType="go" secureTextEntry="YES"/>
                                            </textField>
                                        </subviews>
                                        <constraints>
                                            <constraint firstItem="Py6-cP-93z" firstAttribute="height" secondItem="bVG-pA-nWO" secondAttribute="height" id="DIT-yu-poT"/>
                                        </constraints>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cvS-XG-aGi" customClass="CustomButton" customModule="Photo" customModuleProvider="target">
                                        <rect key="frame" x="16" y="338" width="382" height="50"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btn_login"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="nkD-ov-TMn"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                        <state key="normal" title="LOG IN">
                                            <color key="titleColor" name="mainColor"/>
...
                                        <connections>
                                            <action selector="loginButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EbL-Yz-7pu"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CSQ-OD-jAu" customClass="CustomButton" customModule="Photo" customModuleProvider="target">
                                        <rect key="frame" x="16" y="452" width="382" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnSignup"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="8Wo-u4-nJg"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                        <state key="normal" title="SIGN UP">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
